<resources>
    <string name="btnClickToLearnMore">Click here to learn more!</string>
    <string name="tvAnimalSafari">ANIMAL SAFARI</string>
    <string name="app_name">Practical2</string>
    <string name="tvGreySeal">Grey Seal</string>
    <string name="tvGiantPanda">Giant Panda Bear</string>
    <string name="tvGlassLizard">Glass Lizard</string>
    <string name="tvGilaMonster">Gila Monster</string>
    <string name="tvGiantClam">Giant Clam</string>
    <string name="tvGreenBeeEater">Green Bee-Eater</string>
    <string name="tvGriffonshire">Griffonshire</string>
    <string name="tvGiantAfricanLandSnail">Giant African Land Snail</string>
    <string name="tvGlassFrog">Glass Frog</string>
    <string name="tvGecko">Gecko</string>
    <string name="tvGreySealTitle">GREY SEAL</string>
    <string name="tvGlassLizardTitle">GLASS LIZARD</string>
    <string name="tvGilaMonsterTitle">GILA MONSTER</string>
    <string name="tvGiantPandaBearTitle">GIANT PANDA BEAR</string>
    <string name="tvGiantClamTitle">GIANT CLAM</string>
    <string name="tvGreenBeeEaterTitle">GREEN BEE-EATER</string>
    <string name="tvGriffonshireTitle">GRIFFONSHIRE</string>
    <string name="tvGiantAfricanLandSnailTitle">GIANT AFRICAN LAND SNAIL</string>
    <string name="tvGlassFrogTitle">GLASS FROG</string>
    <string name="tvGeckoTitle">GECKO</string>
    <string name="tvGreySealAbout"><u>About the Grey Seal</u></string>
    <string name="tvGiantPandaBearAbout"><u>About the Giant Panda Bear</u></string>
    <string name="tvGlassLizardAbout"><u>About the Glass Lizard</u></string>
    <string name="tvGilaMonsterAbout"><u>About the Gila Monster</u></string>
    <string name="tvGiantClamAbout"><u>About the Giant Clam</u></string>
    <string name="tvGreenBeeEaterAbout"><u>About the Green Bee_Eater</u></string>
    <string name="tvGriffonshireAbout"><u>About the Griffonshire</u></string>
    <string name="tvGiantAfricanLandSnailAbout"><u>About the Giant African Land Snail</u></string>
    <string name="tvGlassFrogAbout"><u>About the Glass Frog</u></string>
    <string name="tvGeckoAbout"><u>About the Gecko</u></string>
    <string name="tvFact1"><b>Fact 1:</b></string>
    <string name="tvFact2"><b>Fact 2:</b></string>
    <string name="tvFact3"><b>Fact 3:</b></string>
    <string name="tvFact4"><b>Fact 4:</b></string>
    <string name="tvGreySealDetails">A grey seal is one of the rarest species of seal alive today.
        They can adapt to life on a coastline but go to the ocean when hunting for food.
        These seals can live from 25 to 35 years. The big, curved nose of grey seals
        has earned them the name the horseheads of the sea. <b> A grey seal can dive 1,500
            feet below the surface of the ocean and stay under for an hour.</b></string>
    <string name="tvGiantPandaBearDetails">The Giant Panda is a species of bear that is found
        in the mountains of central and western China. One of the most famous and easily identifiable
        animals in the world, the Giant Panda is also one of the rarest and is under immense threat
        in its natural environment, primarily from habitat loss. The Giant Panda is unique among bears
        as they do not hibernate, have very small babies at birth and survive on a diet that is almost
        entirely vegetarian. Since the Giant Panda was first discovered by a French naturalist in 1869,
        it has become a global symbol for conservation with the World Wildlife Fund using it as their logo.
        The Chinese people also see the Giant Panda as a symbol of peace and numerous efforts have been made
        to try and protect the remaining populations in their native habitats.</string>
    <string name="tvGlassLizardDetails">The glass lizard is a legless reptile that’s native to North America.
        This intelligent lizard dominates everywhere between the rocky beaches of Florida to the grassy
        expanses of the Midwest. Hidden in these places, the Ophisaurus waits patiently for its prey:
        insects, spiders, and other small creatures that crawl in the damp spaces underground.
        These lizards are known for having long tails that make up the majority of their bodies.
        Although it’s possible for one of these tails to regrow if it gets broken off, the truth is
        that the new tail will have neither the same markings nor reach the same length as the original.
        Because of this, responsible handlers take great care to avoid harming any glass lizards they meet.
        These lizards are not known to bite humans if approached with a friendly attitude.
        Luckily, Ophisaurus is a resourceful species that has managed to successfully spread across America’s
        warm and moderate climates. You can tell that you’re looking at a glass lizard if its eyes
        can open and close; this is something that a snake simply cannot do.</string>
    <string name="tvGilaMonsterDetails"><b>The Gila Monster is the largest lizard in the United States!</b>
        The Gila monster is not just the largest lizard in the United States, it’s one of four North American
        lizards that are venomous. The others are species of Mexican beaded lizards that are found in
        Guatemala and Mexico. Despite its venom, the Gila monster is a rather lethargic animal and is not
        dangerous to humans. Found in the Mexican Sonora and the southwestern United States,
        its conservation status is near threatened.</string>
    <string name="tvGiantClamDetails"><b>“A giant clam can weigh up to 550 pounds!”</b> Giant clams grow to
        be about 4 feet in length. They live in the Indian and South Pacific Oceans. The exposed mantle,
        or soft tissue, of a giant clam, features a combination of colors and patterns that can include yellow,
        green, iridescent blue, and purple. This species of clam is an omnivore eating tiny marine plants as
        well as animals in the form of zooplankton. The lifespan of this mollusk goes all the way u
        p to 100 years!</string>
    <string name="tvGreenBeeEaterDetails"><b>The green bee-eater, or little green bee-eater, is one of the
        smallest birds in the bee-eater family.</b> It is known for its small size, unique sound,
        slender body, and bright plumage as well as for being one of the most beautiful birds.
        It is found in a variety of wooded areas throughout sub-Saharan Africa, western Arabia,
        and east Asia. Although it’s in no danger of extinction, it is experiencing a decline in its native habitat
        as well as populations of its main prey, honeybees.</string>
    <string name="tvGriffonshireDetails"><b>It’s not uncommon for Griffonshire adults to be mistaken for puppies
        due to their small size.</b> Breed a Brussels Griffon with a Yorkshire Terrier and you have a puppy called
        a Griffonshire. Griffonshires were first bred in the decade of the 1980s. These small dogs possess
        some of the best qualities of each of their purebred parents. The Griffonshire belongs to the
        hybrid group.Griffonshires are intelligent, lively, and protective of their families. If a
        Griffonshire is socialized from the time it’s a puppy, then it’s likely to interact well with
        children.</string>
    <string name="tvGiantAfricanLandSnailDetails"><b>“The Giant African Land Snail is a big, tough,
        well-traveled snail”</b> As its name suggests, the Giant African Land Snail is one of the
        largest snails in the world. Though it is native to East Africa, it has been introduced
        in many other places. In many of these places, it has, unfortunately, become something of
        a pest. Though the Giant African Land Snail evolved in tropical climes, it has learned to
        thrive in more temperate areas and may even hibernate, or estivate during the colder or
        drier months.</string>
    <string name="tvGeckoDetails"><b>“Geckos can climb vertical walls and stroll across ceilings.”</b>
        Geckos have been around for at least 300 million years. Scientists have found geckos preserved in
        amber that dates back to the Cretaceous Period, and those specimens look remarkably like the
        gentle little lizards you’ll find in so many parts of the world today.
        There are approximately 1,500 gecko species, and they vary in size from the Jaragua Sphaero dwarf
        gecko, which measures just three-quarters of an inch long and weighs less than one-hundredth
        of an ounce, to the New Caledonian giant gecko, which can grow to 17 inches and tips the scales
        at 10 ounces. Geckos thrive in practically every habitat, including rain forests, mountains,
        and deserts, so long as average temperatures reach 72 degrees Fahrenheit.</string>
    <string name="tvFacts"><u>Facts about the animal!</u></string>
    <string name="tvFrequentQuestions">Frequent question asked!</string>
    <string name="tvGriffonshireQuestion1"><b>How much does a Griffonshire cost to own?</b></string>
    <string name="tvGriffonshireAnswer1">Breeders charge around $700 for a Griffonshire puppy.
        Of course, the price varies from breeder to breeder. Getting a Griffonshire from a rescue
        organization would be a less expensive option to consider. The yearly vet costs of a
        Griffonshire range from $300 to $500. The final price depends on the specific services.</string>
    <string name="tvGriffonshireQuestion2"><b>How long does a Griffonshire live?</b></string>
    <string name="tvGriffonshireAnswer2">Most breeders charge a price of around $700 for a Griffonshire puppy.
        Another option for someone who’d like this type of dog is to get one from a Griffonshire
        rescue organization. The price of a Griffonshire from a rescue organization would be a lot lower
        than it would be for someone dealing with a dog breeder.</string>
    <string name="tvGriffonShireQuestion3"><b>How long does a Griffonshire live?</b></string>
    <string name="tvGriffonShireAnswer3">The lifespan of a Griffonshire is 12 to 15 years.
        But a Griffonshire that’s well cared for may live even longer!</string>
    <string name="tvGilaMonsterFact1">A group of Gila monsters is called a lounge.</string>
    <string name="tvGilaMonsterFact2">They go into a state called “brumation,”
        which is hibernation for cold-blooded animals.</string>
    <string name="tvGilaMonsterFact3">They store fat in their tails.
        This allows them to fast for months.</string>
    <string name="tvGilaMonsterFact4">The Gila monster has grooves
        in its teeth through which it injects venom.</string>
    <string name="tvGeckoFact1">These reptiles can climb practically every vertical surface effortlessly
        thanks to the tensile suction created by hundreds of thousands of tiny hairs on their toes.</string>
    <string name="tvGeckoFact2">They are the only lizards with true vocal cords.</string>
    <string name="tvGeckoFact3">These reptiles clean their eyes by licking them.</string>
    <string name="tvGeckoFact4">When they lose their tails to predators, they can regenerate new tails.</string>
</resources>