<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#474545"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGriffonshire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="40dp"
                android:text="@string/tvGriffonshire"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/ivGriffonshire"
                android:layout_width="match_parent"
                android:layout_height="281dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGriffonshireAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:text="@string/tvGriffonshireAbout"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvGriffonshireDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvGriffonshireDetails"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGriffonshireFAQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:text="@string/tvFrequentQuestions"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvGriffonshireQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/tvGriffonshireQuestion1"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvGriffonshireA1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvGriffonshireAnswer1"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvGriffonshireQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:text="@string/tvGriffonshireQuestion2"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvGriffonshireA2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvGriffonshireAnswer2"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/tvGriffonshireQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/tvGriffonShireQuestion3"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvGriffonshireA3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:text="@string/tvGriffonShireAnswer3" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/btnToPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/btnClickToLearnMore" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
