<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#474545"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGeckoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:padding="30dp"
                android:textColor="@color/white"
                android:text="@string/tvGeckoTitle" />

            <ImageView
                android:id="@+id/ivGecko"
                android:layout_width="match_parent"
                android:layout_height="230dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGeckoAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/tvGeckoAbout" />

                <TextView
                    android:id="@+id/tvGeckoDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:text="@string/tvGeckoDetails" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGeckoFacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/tvFacts" />

                <TextView
                    android:id="@+id/tvGeckoFact1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textSize="25sp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:text="@string/tvGeckoFact1" />

                <TextView
                    android:id="@+id/tvGeckoFact2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textSize="25sp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:text="@string/tvGeckoFact2" />

                <TextView
                    android:id="@+id/tvGeckoFact3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textSize="25sp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:text="@string/tvGeckoFact3" />

                <TextView
                    android:id="@+id/tvGeckoFact4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textSize="25sp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:text="@string/tvGeckoFact4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/btnToPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/btnClickToLearnMore" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
